--- a/src/css/variables.styl
+++ b/src/css/variables.styl
@@ -6,8 +6,8 @@ $terciary-color = #dcccff
 $accent-color = #56a3a6
 
 $grey = #403f4c
-$grey-ligter-1 = lighten($grey, 20%)
-$grey-ligter-2 = lighten($grey, 40%)
-$grey-ligter-3 = lighten($grey, 50%)
-$grey-ligter-4 = lighten($grey, 60%)
-$grey-ligter-5 = lighten($grey, 80%)
+$grey-lighter-1 = lighten($grey, 20%)
+$grey-lighter-2 = lighten($grey, 40%)
+$grey-lighter-3 = lighten($grey, 50%)
+$grey-lighter-4 = lighten($grey, 60%)
+$grey-lighter-5 = lighten($grey, 80%)
